[gd_scene load_steps=10 format=3 uid="uid://ml08ihwpuksa"]

[ext_resource type="Script" path="res://addons/tabby_explorer/editor/sub_fs_dock/sub_fs_config.gd" id="1_87stq"]
[ext_resource type="PackedScene" uid="uid://c81nrsifb1lwy" path="res://addons/tabby_explorer/editor/sub_fs_dock/sub_fs_config_docks.tscn" id="2_nlk06"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m0cu5"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 5.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xpk20"]
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.345098, 0.345098, 0.345098, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_srb6a"]
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.345098, 0.345098, 0.345098, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 4

[sub_resource type="Image" id="Image_dgpy5"]
data = {
"data": PackedByteArray(255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 231, 255, 94, 94, 54, 255, 94, 94, 57, 255, 93, 93, 233, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 231, 255, 94, 94, 54, 255, 94, 94, 57, 255, 93, 93, 233, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 93, 93, 233, 255, 93, 93, 232, 255, 93, 93, 41, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 93, 93, 233, 255, 93, 93, 232, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 44, 255, 255, 255, 0, 255, 97, 97, 42, 255, 97, 97, 42, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 44, 255, 255, 255, 0, 255, 97, 97, 42, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 235, 255, 94, 94, 234, 255, 95, 95, 43, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 235, 255, 94, 94, 234, 255, 95, 95, 43, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 235, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 233, 255, 95, 95, 59, 255, 96, 96, 61, 255, 93, 93, 235, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 233, 255, 95, 95, 59, 255, 96, 96, 61, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id="ImageTexture_lucf3"]
image = SubResource("Image_dgpy5")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0ipy6"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0, 0.38, 0.88, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6fh0l"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.47, 0.6, 1, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[node name="config" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_87stq")

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 2

[node name="config_inner" type="MarginContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="config_inner"]
layout_mode = 2

[node name="config_scroll_container" type="ScrollContainer" parent="config_inner/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_m0cu5")

[node name="scroll_inner" type="VBoxContainer" parent="config_inner/VBoxContainer/config_scroll_container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PluginTitle" type="Label" parent="config_inner/VBoxContainer/config_scroll_container/scroll_inner"]
layout_mode = 2
text = "Tabby Explorer Plugin Settings"
horizontal_alignment = 1

[node name="Control6" type="Control" parent="config_inner/VBoxContainer/config_scroll_container/scroll_inner"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
size_flags_horizontal = 3

[node name="heading_controls" type="HBoxContainer" parent="config_inner/VBoxContainer/config_scroll_container/scroll_inner"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="repo_btn" type="Button" parent="config_inner/VBoxContainer/config_scroll_container/scroll_inner/heading_controls"]
layout_mode = 2
text = "README"

[node name="Control" type="Control" parent="config_inner/VBoxContainer/config_scroll_container/scroll_inner/heading_controls"]
layout_mode = 2
size_flags_horizontal = 3

[node name="donate_btn" type="Button" parent="config_inner/VBoxContainer/config_scroll_container/scroll_inner/heading_controls"]
layout_mode = 2
text = "Support Development"

[node name="Control" type="Control" parent="config_inner/VBoxContainer/config_scroll_container/scroll_inner"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="options_container" type="VBoxContainer" parent="config_inner/VBoxContainer/config_scroll_container/scroll_inner"]
layout_mode = 2

[node name="section" type="HBoxContainer" parent="config_inner/VBoxContainer/config_scroll_container/scroll_inner/options_container"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 10

[node name="option_section" type="Button" parent="config_inner/VBoxContainer/config_scroll_container/scroll_inner/options_container/section"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_xpk20")
text = "General Options"

[node name="fields" type="VBoxContainer" parent="config_inner/VBoxContainer/config_scroll_container/scroll_inner/options_container"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="config_inner/VBoxContainer/config_scroll_container/scroll_inner/options_container/fields"]
layout_mode = 2

[node name="dock_for_favorites_checkbox" type="CheckBox" parent="config_inner/VBoxContainer/config_scroll_container/scroll_inner/options_container/fields/VBoxContainer"]
layout_mode = 2
tooltip_text = "With this option,  plugin will generate a  dock with favorites"
text = " Dedicated dock for Folders in Favorites"

[node name="HBoxContainer" type="HBoxContainer" parent="config_inner/VBoxContainer/config_scroll_container/scroll_inner/options_container/fields/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="config_inner/VBoxContainer/config_scroll_container/scroll_inner/options_container/fields/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Dock name for Favorites :"

[node name="favorites_dock_name" type="LineEdit" parent="config_inner/VBoxContainer/config_scroll_container/scroll_inner/options_container/fields/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Favorites"

[node name="support_context_menu_checkbox" type="CheckBox" parent="config_inner/VBoxContainer/config_scroll_container/scroll_inner/options_container/fields/VBoxContainer"]
layout_mode = 2
tooltip_text = "DFSI mode, implemented through some clever tweaks, introduces additional features. These include a context menu that appears with a right mouse button click, enabling the opening of files handled by the default FileSystem dock.
Without DFSI mode, Tabby Explorer operates in a read-only mode."
text = "Activate DFSI mode (Experimental)"

[node name="Label" type="Label" parent="config_inner/VBoxContainer/config_scroll_container/scroll_inner/options_container/fields/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
text = "DFSI mode, implemented through some clever tweaks, introduces additional features. These include a context menu that appears with a right mouse button click, enabling the opening of files handled by the default FileSystem dock.
Without DFSI mode, Tabby Explorer operates in a read-only mode."
autowrap_mode = 2

[node name="Control2" type="Control" parent="config_inner/VBoxContainer/config_scroll_container/scroll_inner/options_container"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="user_docks_section" type="Button" parent="config_inner/VBoxContainer/config_scroll_container/scroll_inner"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_srb6a")
text = "Docks (User)"

[node name="use_user_config_checkbox" type="CheckBox" parent="config_inner/VBoxContainer/config_scroll_container/scroll_inner"]
layout_mode = 2
tooltip_text = "Use project shared configuration"
text = "Enabled"

[node name="user_prefix" type="HBoxContainer" parent="config_inner/VBoxContainer/config_scroll_container/scroll_inner"]
layout_mode = 2

[node name="Label" type="Label" parent="config_inner/VBoxContainer/config_scroll_container/scroll_inner/user_prefix"]
layout_mode = 2
text = " Prefix : "

[node name="user_docks_prefix" type="LineEdit" parent="config_inner/VBoxContainer/config_scroll_container/scroll_inner/user_prefix"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Insert a prefix to avoid dock name conflict"
select_all_on_focus = true

[node name="Control4" type="Control" parent="config_inner/VBoxContainer/config_scroll_container/scroll_inner"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2

[node name="user_docks_config" parent="config_inner/VBoxContainer/config_scroll_container/scroll_inner" instance=ExtResource("2_nlk06")]
layout_mode = 2
title = "Docks (User)"

[node name="Control2" type="Control" parent="config_inner/VBoxContainer/config_scroll_container/scroll_inner"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2

[node name="user_docks_section2" type="Button" parent="config_inner/VBoxContainer/config_scroll_container/scroll_inner"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_srb6a")
text = "Docks (Shared in Project)"

[node name="use_project_shared_config_checkbox" type="CheckBox" parent="config_inner/VBoxContainer/config_scroll_container/scroll_inner"]
layout_mode = 2
tooltip_text = "Use project shared configuration"
text = "Enabled"

[node name="project_prefix" type="HBoxContainer" parent="config_inner/VBoxContainer/config_scroll_container/scroll_inner"]
layout_mode = 2

[node name="Label2" type="Label" parent="config_inner/VBoxContainer/config_scroll_container/scroll_inner/project_prefix"]
layout_mode = 2
text = " Prefix : "

[node name="project_shared_docks_prefix" type="LineEdit" parent="config_inner/VBoxContainer/config_scroll_container/scroll_inner/project_prefix"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Insert a prefix to avoid dock name conflict"
select_all_on_focus = true

[node name="Control5" type="Control" parent="config_inner/VBoxContainer/config_scroll_container/scroll_inner"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2

[node name="project_docks_config" parent="config_inner/VBoxContainer/config_scroll_container/scroll_inner" instance=ExtResource("2_nlk06")]
layout_mode = 2
title = "Docks (Project Shared)"

[node name="Control3" type="Control" parent="config_inner/VBoxContainer/config_scroll_container/scroll_inner"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="config_inner/VBoxContainer/config_scroll_container/scroll_inner"]
layout_mode = 2
alignment = 1

[node name="bottom_toolbar" type="HBoxContainer" parent="config_inner/VBoxContainer"]
layout_mode = 2

[node name="cancel_btn" type="Button" parent="config_inner/VBoxContainer/bottom_toolbar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
text = "  Cancel  "
icon = SubResource("ImageTexture_lucf3")

[node name="apply_options_btn" type="Button" parent="config_inner/VBoxContainer/bottom_toolbar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_0ipy6")
theme_override_styles/hover = SubResource("StyleBoxFlat_6fh0l")
text = "  Apply  "
icon = SubResource("ImageTexture_lucf3")
